# dspy-deepagents

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: improvements.md  phase-0-discovery.md  phase-1-skeleton.md  phase-2-roles.md  phase-3-memory-trace.md  phase-4-tools.md  phase-5-reflection.md  phase-6-evaluation.md  review-and-plan.md
dspy_deepagents/: __init__.py  agent.py  codebase_tools.py  memory.py  recursive_agent.py  roles.py  signature.py  tools.py  trace.py
examples/: basic_recursive_agent.py  deep_coding_agent.py  deep_research_agent.py  eval_harness.py  review_recursive_agent.py  tool_recursive_agent.py
tests/: test_agent.py  test_codebase_tools.py  test_coding_agent.py  test_memory.py  test_recursive_agent.py  test_signature.py  test_tools.py  test_trace.py
